# class-properties

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst
src/class_properties/: __init__.py  class_properties.pyi  core.py
tests/: test_basic.py
