
[tool.poetry]
name = "class-properties"
version = "0.1.0"
description = "Utilities for class-level properties."
authors = ["Warren Smith"]
license = "MIT"
readme = "README.md"
packages = [{ include = "class_properties", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
mypy = "^1.0.0"
ruff = "^0.6.0"
sphinx = "^7.0.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
    "E711",
    "E712",
    "E721",
    "E722",
    "E731",
    "E741",
    "F402",
    "F403",
    "F405",
    "F601",
    "F811",
    "F821",
    "F841",
]
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
